applications/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: code-server
  name: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: code-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: code-server
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/London
          image: ghcr.io/linuxserver/code-server
          name: code-server
          ports:
            - containerPort: 8443
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: server
              subPath: code-server
            - mountPath: /code
              name: code
      restartPolicy: Always
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
        - name: code
          persistentVolumeClaim:
            claimName: code
