applications/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: code-server
  name: code-server
spec:
  ports:
    - name: code-server
      port: 8443
      targetPort: 8443
  selector:
    io.kompose.service: code-server
