applications/code-server/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("code.joshaconnor.duckdns.org")
      kind: Rule
      services:
        - name: code-server
          port: 8443
